--- a/themes/next/assets/scss/base/base.scss
+++ b/themes/next/assets/scss/base/base.scss
@@ -4,6 +4,11 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+html,
+body {
+    min-height: 100vh;
+}
+
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
@@ -18,12 +23,34 @@ body {
     line-height: 1.5;
     color: var(--text);
     font-family: 'Inter', sans-serif;
+    &.simple {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > section {
+            flex-grow: 1;
+            max-width: 320px;
+            h1 {
+                margin: 0 0 24px 0;
+            }
+            .copyright {
+                --color: var(--text-light);
+                display: table;
+                margin: 24px 0 0 0;
+                font-size: 14px;
+            }
+        }
+    }
+    &.interface {
+        background: var(--black);
+    }
 }
 
 a {
     --color: var(--primary);
     text-decoration: none;
     color: var(--color);
+    transition: color .3s ease;
     &:link,
     &:active,
     &:visited,
