--- a/themes/next/assets/scss/style.scss
+++ b/themes/next/assets/scss/style.scss
@@ -8,3 +8,8 @@
 
 @import 'components/buttons';
 @import 'components/forms';
+@import 'components/typography';
+
+@import 'sections/general';
+@import 'sections/simple';
+@import 'sections/sidebar';
