--- a/themes/next/assets/scss/vars.scss
+++ b/themes/next/assets/scss/vars.scss
@@ -8,11 +8,12 @@
     --grey-light: #9799B3;
     --grey-lighter: #CACDDF;
     --light: #DADCEC;
+    --lighter: #EAECF8;
     --pale: #F8F9FF;
 
     --primary: #4886FF;
     --primary-dark: #3D77E9;
-    --primary-shadow: rgba(72, 134, 255, .4);
+    --primary-shadow: rgba(72, 134, 255, .32);
 
     --success: #09E162;
     --error: #FE5C5C;
