--- a/themes/next/assets/scss/base/base.scss
+++ b/themes/next/assets/scss/base/base.scss
@@ -27,9 +27,11 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
+        background: var(--pale);
         & > section {
             flex-grow: 1;
-            max-width: 320px;
+            max-width: 360px;
+            padding: 20px;
             h1 {
                 margin: 0 0 24px 0;
             }
@@ -38,6 +40,9 @@ body {
                 display: table;
                 margin: 24px 0 0 0;
                 font-size: 14px;
+                &:hover {
+                    --color: var(--text);
+                }
             }
         }
     }
