message styles, tidy up some files

--- a/themes/next/assets/scss/base/base.scss
+++ b/themes/next/assets/scss/base/base.scss
@@ -34,6 +34,7 @@ body {
             padding: 20px;
             h1 {
                 margin: 0 0 24px 0;
+                line-height: 1;
             }
             .copyright {
                 --color: var(--text-light);
