--- a/themes/next/assets/scss/style.scss
+++ b/themes/next/assets/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'components/buttons';
 @import 'components/forms';
 @import 'components/typography';
+@import 'components/messages';
 
 @import 'sections/general';
 @import 'sections/simple';
