--- a/themes/next/assets/scss/vars.scss
+++ b/themes/next/assets/scss/vars.scss
@@ -14,10 +14,14 @@
     --primary: #4886FF;
     --primary-dark: #3D77E9;
     --primary-shadow: rgba(72, 134, 255, .32);
+    --primary-pale: #E2EBFF;
 
-    --success: #09E162;
-    --error: #FE5C5C;
-    --warning: #F8C51C;
+    --success: #0FC258;
+    --success-pale: #D8F5E4;
+    --error: #E14545;
+    --error-pale: #FAE1E1;
+    --warning: #E1BD29;
+    --warning-pale: #FAF4DD;
 
     --text: var(--grey);
     --text-light: var(--grey-light);
