--- a/themes/next/assets/scss/components/typography.scss
+++ b/themes/next/assets/scss/components/typography.scss
@@ -16,3 +16,10 @@ h1 {
     color: var(--text-dark);
     font-size: 32px;
 }
+
+h2 {
+    font-weight: normal;
+    color: var(--text-dark);
+    font-size: 24px;
+    margin: 20px 0;
+}
