--- a/themes/next/assets/scss/components/messages.scss
+++ b/themes/next/assets/scss/components/messages.scss
@@ -40,5 +40,8 @@
 .message-container {
     .message {
         margin: 16px 0;
+        @include max(xs) {
+            margin: 12px 0;
+        }
     }
 }
