small style improvements

--- a/themes/next/assets/scss/base/base.scss
+++ b/themes/next/assets/scss/base/base.scss
@@ -86,6 +86,9 @@ a {
         text-decoration: none;
         color: var(--color);
     }
+    &:hover {
+        --color: var(--primary-dark);
+    }
 }
 
 hr {
