--- a/themes/next/assets/scss/sections/sidebar.scss
+++ b/themes/next/assets/scss/sections/sidebar.scss
@@ -195,9 +195,12 @@
             }
         }
         .aaroniker {
-            color: var(--grey-dark);
+            --color: var(--grey-dark);
             display: table;
             margin: 12px auto 0 auto;
+            &:hover {
+                --color: var(--grey);
+            }
             svg {
                 display: block;
                 margin: 0 auto;
