--- a/themes/next/assets/scss/sections/overview.scss
+++ b/themes/next/assets/scss/sections/overview.scss
@@ -1,7 +1,7 @@
 //main: ../style.scss
 
 #overview-stats {
-    --auto-grid-min-size: 200px;
+    --auto-grid-min-size: 220px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
     grid-gap: 32px;
@@ -16,6 +16,32 @@
             color: var(--text-dark);
             font-weight: bold;
             font-size: 20px;
+            line-height: 28px;
+            svg {
+                display: inline-block;
+                width: 20px;
+                height: 20px;
+                vertical-align: top;
+                margin: 4px 4px 4px 0;
+            }
+            small {
+                font-weight: 500;
+                vertical-align: bottom;
+                font-size: 12px;
+                line-height: 24px;
+                display: inline-block;
+                color: var(--text);
+            }
+            &.success {
+                svg {
+                    color: var(--success);
+                }
+            }
+            &.error {
+                svg {
+                    color: var(--error);
+                }
+            }
         }
         span {
             display: block;
