--- a/themes/next/assets/scss/sections/sidebar.scss
+++ b/themes/next/assets/scss/sections/sidebar.scss
@@ -19,8 +19,8 @@
         top: 0;
         bottom: 0;
         left: 0;
-        right: -20px;
-        padding: 0 20px 32px 0;
+        right: -24px;
+        padding: 0 24px 32px 0;
         overflow: auto;
         display: flex;
         flex-direction: column;
@@ -189,6 +189,15 @@
             font-size: 12px;
             margin: auto 0 0 0;
             color: var(--text-dark);
+            @include max(sm) {
+                padding: 20px 24px 0 24px;
+            }
+            @include max(xs) {
+                padding: 16px 20px 0 20px;
+            }
+            @include max(xxs) {
+                padding: 16px 16px 0 16px;
+            }
             li {
                 display: flex;
                 justify-content: space-between;
@@ -197,13 +206,21 @@
         .aaroniker {
             --color: var(--grey-dark);
             display: table;
-            margin: 12px auto 0 auto;
+            margin: 12px 0 0 32px;
+            @include max(sm) {
+                margin-left: 24px;
+            }
+            @include max(xs) {
+                margin-left: 20px;
+            }
+            @include max(xxs) {
+                margin-left: 16px;
+            }
             &:hover {
                 --color: var(--grey);
             }
             svg {
                 display: block;
-                margin: 0 auto;
                 width: 24px;
                 height: 20px;
             }
