--- a/themes/next/assets/scss/sections/sidebar.scss
+++ b/themes/next/assets/scss/sections/sidebar.scss
@@ -25,13 +25,13 @@
         display: flex;
         flex-direction: column;
         @include max(md) {
-            padding-top: 12px;
+            padding-top: 20px;
         }
         & > img {
             align-self: flex-start;
             display: block;
-            margin: 40px 32px;
-            max-width: 106px;
+            margin: 32px;
+            max-width: 112px;
             @include max(md) {
                 display: none;
             }
