--- a/themes/next/assets/scss/style.scss
+++ b/themes/next/assets/scss/style.scss
@@ -10,8 +10,10 @@
 @import 'components/forms';
 @import 'components/typography';
 @import 'components/messages';
+@import 'components/dropdown';
 
 @import 'sections/general';
 @import 'sections/simple';
 @import 'sections/sidebar';
 @import 'sections/overview';
+@import 'sections/list';
