--- a/themes/next/assets/scss/vars.scss
+++ b/themes/next/assets/scss/vars.scss
@@ -7,9 +7,10 @@
     --grey: #74768D;
     --grey-light: #9799B3;
     --grey-lighter: #CACDDF;
-    --light: #DADCEC;
+    --light: #E0E2F1;
     --lighter: #EAECF8;
     --pale: #F8F9FF;
+    --pale-light: #F9FAFF;
 
     --primary: #4886FF;
     --primary-dark: #3D77E9;
