--- a/themes/next/admin/users.phtml
+++ b/themes/next/admin/users.phtml
@@ -4,76 +4,82 @@
             link, "<?= tojs(tr('Are you sure you want to delete this account?')); ?>"
         );
     }
-
-    $(function() {
-        $("#administrators_table, #resellers_table").dataTable({
-            language: <?= getDataTablesPluginTranslations(); ?>,
-            displayLength: 10,
-            stateSave: true,
-            pagingType: "simple",
-            columnDefs: [{sortable: false, searchable: false, targets: [3]}]
-        });
-    });
 </script>
-<h3 class="user_yellow"><span><?= tohtml(tr('Administrator')); ?></span></h3>
-<!-- BDP: administrator_message -->
-<div class="static_info"><?= tohtml(tr('No account found.')); ?></div>
-<!-- EDP: administrator_message -->
+
 <!-- BDP: administrator_list -->
-<table class="firstColFixed" id="administrators_table">
-    <thead>
-    <tr>
-        <th><?= tohtml(tr('Username')); ?></th>
-        <th><?= tohtml(tr('Created on')); ?></th>
-        <th><?= tohtml(tr('created by')); ?></th>
-        <th><?= tohtml(tr('Actions')); ?></th>
-    </tr>
-    </thead>
-    <tbody>
-    <!-- BDP: administrator_item -->
-    <tr>
-        <td>{ADMINISTRATOR_USERNAME}</td>
-        <td>{ADMINISTRATOR_CREATED_ON}</td>
-        <td>{ADMINISTRATPR_CREATED_BY}</td>
-        <td>
-            <a href="user_edit.php?edit_id={ADMINISTRATOR_ID}" class="icon i_user" title="<?= tohtml(tr('Edit'), 'htmlAttr'); ?>"><?= tohtml(tr('Edit')); ?></a>
-            <!-- BDP: administrator_delete_link -->
-            <a href="user_delete.php?delete_id={ADMINISTRATOR_ID}" class="icon i_delete" onclick="return action_delete(this)" title="<?= tohtml(tr('Delete'), 'htmlAttr'); ?>"><?= tohtml(tr('Delete')); ?></a>
-            <!-- EDP: administrator_delete_link -->
-        </td>
-    </tr>
-    <!-- EDP: administrator_item -->
-    </tbody>
-</table>
-<!-- EDP: admin_list -->
-<h3 class="user_green"><span><?= tohtml(tr('Resellers')); ?></span></h3>
-<!-- BDP: reseller_message -->
-<div class="static_info"><?= tohtml(tr('No account found.')); ?></div>
-<!-- EDP: reseller_message -->
+<div class="list">
+    <div class="toolbar">
+        <h3><?=tohtml(tr('Administrator')); ?></h3>
+    </div>
+    <div class="legend">
+        <ul>
+            <li><?=tohtml(tr('Username')); ?></li>
+            <li><?=tohtml(tr('Created on')); ?></li>
+            <li><?=tohtml(tr('Created by')); ?></li>
+        </ul>
+    </div>
+    <ul>
+        <!-- BDP: administrator_item -->
+        <li>
+            <div class="username">{ADMINISTRATOR_USERNAME}</div>
+            <div class="created_on">{ADMINISTRATOR_CREATED_ON}</div>
+            <div class="created_by">{ADMINISTRATPR_CREATED_BY}</div>
+            <div>
+                <a href="user_edit.php?edit_id={ADMINISTRATOR_ID}" class="btn sm muted"><?=tohtml(tr('Edit')); ?></a>
+                <!-- BDP: administrator_delete_link -->
+                <a href="user_delete.php?delete_id={ADMINISTRATOR_ID}" onclick="return action_delete(this)"><?=tohtml(tr('Delete')); ?></a>
+                <!-- EDP: administrator_delete_link -->
+            </div>
+        </li>
+        <!-- EDP: administrator_item -->
+        <!-- BDP: administrator_message -->
+        <li class="no">
+            <div class="message info"><?=tohtml(tr('No account found.')); ?></div>
+        </li>
+        <!-- EDP: administrator_message -->
+    </ul>
+</div>
+<!-- EDP: administrator_list -->
+
 <!-- BDP: reseller_list -->
-<table class="firstColFixed" id="resellers_table">
-    <thead>
-    <tr>
-        <th><?= tohtml(tr('Username')); ?></th>
-        <th><?= tohtml(tr('Created on')); ?></th>
-        <th><?= tohtml(tr('Created by')); ?></th>
-        <th><?= tohtml(tr('Action')); ?></th>
-    </tr>
-    </thead>
-    <tbody>
-    <!-- BDP: reseller_item -->
-    <tr>
-        <td>{RESELLER_USERNAME}</td>
-        <td>{RESELLER_CREATED_ON}</td>
-        <td>{RESELLER_CREATED_BY}</td>
-        <td>
-            <a class="icon i_details" href="change_user_interface.php?to_id={RESELLER_ID}" title="<?= tohtml(tr('Switch to user interface'), 'htmlAttr'); ?>"><?= tohtml(tr('Switch')); ?></a>
-            <a href="reseller_edit.php?edit_id={RESELLER_ID}" class="icon i_user" title="<?= tohtml(tr('Edit'), 'htmlAttr'); ?>"><?= tohtml(tr('Edit')); ?></a>
-            <a href="user_delete.php?delete_id={RESELLER_ID}" class="icon i_delete" title="<?= tohtml(tr('Delete'), 'htmlAttr'); ?>" onclick="return action_delete(this)"><?= tohtml(tr('Delete')); ?></a>
-        </td>
-    </tr>
-    <!-- EDP: reseller_item -->
-    </tbody>
-</table>
+<div class="list">
+    <div class="toolbar">
+        <h3><?=tohtml(tr('Resellers')); ?></h3>
+    </div>
+    <div class="legend">
+        <ul>
+            <li><?=tohtml(tr('Username')); ?></li>
+            <li><?=tohtml(tr('Created on')); ?></li>
+            <li><?=tohtml(tr('Created by')); ?></li>
+        </ul>
+    </div>
+    <ul>
+        <!-- BDP: reseller_item -->
+        <li>
+            <div class="username">{RESELLER_USERNAME}</div>
+            <div class="created_on">{RESELLER_CREATED_ON}</div>
+            <div class="created_by">{RESELLER_CREATED_BY}</div>
+            <div>
+                <a href="change_user_interface.php?to_id={RESELLER_ID}" class="btn sm muted"><?=tohtml(tr('Switch')); ?></a>
+                <div class="dropdown">
+                    <span>
+                        <i></i>
+                    </span>
+                    <ul>
+                        <li><a href="reseller_edit.php?edit_id={RESELLER_ID}"><?=tohtml(tr('Edit')); ?></a></li>
+                        <li class="delete"><a href="user_delete.php?delete_id={RESELLER_ID}" onclick="return action_delete(this)"><?=tohtml(tr('Delete')); ?></a></li>
+                    </ul>
+                </div>
+            </div>
+        </li>
+        <!-- EDP: reseller_item -->
+        <!-- BDP: reseller_message -->
+        <li class="no">
+            <div class="message info"><?=tohtml(tr('No account found.')); ?></div>
+        </li>
+        <!-- EDP: reseller_message -->
+    </ul>
+</div>
 <!-- EDP: reseller_list -->
+
 <!-- INCLUDE "../shared/partials/client_list.phtml" -->
