--- a/themes/next/assets/scss/components/typography.scss
+++ b/themes/next/assets/scss/components/typography.scss
@@ -23,8 +23,10 @@ h1 {
 h2 {
     font-weight: normal;
     color: var(--text-dark);
-    font-size: 24px;
+    font-size: 22px;
     margin: 20px 0;
+    padding-bottom: 4px;
+    border-bottom: 1px solid var(--border);
     @include max(sm) {
         margin: 16px 0;
         font-size: 20px;
@@ -34,11 +36,10 @@ h2 {
 h3 {
     font-weight: normal;
     color: var(--text-dark);
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     margin: 12px 0;
     @include max(sm) {
         margin: 8px 0;
-        font-size: 18px;
     }
 }
