add tooltip component

--- a/themes/next/assets/scss/style.scss
+++ b/themes/next/assets/scss/style.scss
@@ -10,6 +10,7 @@
 @import 'components/forms';
 @import 'components/typography';
 @import 'components/messages';
+@import 'components/tooltips';
 @import 'components/dropdown';
 
 @import 'sections/general';
